--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "houseofx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.ts"
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0"
